--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.3",
     "jwt-decode": "^3.1.2",
     "ngx-clipboard": "^15.1.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-quill": "1.3",
     "ngx-socket-io": "^4.2.0",
     "ngx-toastr": "^14.2.2",
